--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:image:
   stage: build
   image: docker:latest
   tags:
-    - node
+    - docker
   script:
     - docker build --rm -t ${PROJECT_PATH}:${CI_COMMIT_SHA} .
     - docker tag ${PROJECT_PATH}:${CI_COMMIT_SHA} ${PROJECT_PATH}:latest
