--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "joi": "^13.4.0",
     "joi-browser": "^13.4.0",
     "joi-multiaddr": "^3.0.0",
-    "libp2p": "~0.24.0",
+    "libp2p": "jgantunes/js-libp2p",
     "libp2p-bootstrap": "~0.9.3",
     "libp2p-crypto": "~0.14.1",
     "libp2p-kad-dht": "~0.11.1",
