--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "ipfs-bitswap": "~0.21.0",
     "ipfs-block": "~0.8.0",
     "ipfs-block-service": "~0.15.1",
-    "ipfs-http-client": "^27.0.0",
+    "ipfs-http-client": "jgantunes/js-ipfs-api",
     "ipfs-http-response": "~0.2.1",
     "ipfs-mfs": "~0.5.2",
     "ipfs-multipart": "~0.1.0",
@@ -169,6 +169,7 @@
     "read-pkg-up": "^4.0.0",
     "readable-stream": "3.0.6",
     "receptacle": "^1.3.2",
+    "standard": "^12.0.1",
     "stream-to-pull-stream": "^1.7.2",
     "tar-stream": "^1.6.2",
     "temp": "~0.8.3",
