--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "libp2p-mplex": "~0.8.4",
     "libp2p-record": "~0.6.1",
     "libp2p-secio": "~0.10.1",
-    "libp2p-tcp": "~0.13.0",
+    "libp2p-tcp": "jgantunes/js-libp2p-tcp",
     "libp2p-webrtc-star": "~0.15.5",
     "libp2p-websocket-star": "~0.9.0",
     "libp2p-websockets": "~0.12.0",
