--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "libp2p": "jgantunes/js-libp2p",
     "libp2p-bootstrap": "~0.9.3",
     "libp2p-crypto": "~0.14.1",
-    "libp2p-kad-dht": "~0.11.1",
+    "libp2p-kad-dht": "jgantunes/js-libp2p-kad-dht",
     "libp2p-keychain": "~0.3.3",
     "libp2p-mdns": "~0.12.0",
     "libp2p-mplex": "~0.8.4",
